<resources>
    <string name="app_name">PalTCG</string>
    <string name="app_logo_content_description">Application logo on homepage</string>
    <string name="edittext_username_hints">Enter a username…</string>
    <string name="button_rules_text">RULES</string>
    <string name="button_exit_text">EXIT</string>
    <string name="textView_title_text">Profile creation</string>
    <string name="textView_username_text" translatable="false">[USERNAME]</string>
    <string name="textView_genderTitle">Choose a gender</string>
    <string name="textView_pictureTitle">Choose a profile picture</string>
    <string name="textView_genDeckTitle_text">Generate a deck</string>
    <string name="button_validate_text">SIGN UP</string>
    <string name="need_to_create_a_account">CREATE PROFILE</string>
    <string name="ask_to_delete">Are you sure you want to delete this account?</string>
    <string name="ask_to_delete_title">Delete account</string>
    <string name="error_rules">Error : can\'t show rules.</string>
    <string name="not_enough_active_cards_title">Not enough active cards</string>
    <string name="not_enough_active_cards">You need to active 5 cards to fight.</string>
    <string name="profile">My Profile</string>
    <string name="pseudo">Pseudo :</string>
    <string name="gender">Gender</string>
    <string name="Man">Man</string>
    <string name="Woman">Woman</string>
    <string name="Other">Other</string>
    <string name="Pokemon">Pokemon</string>
    <string name="BirthDay">BirthDay</string>
    <string name="choose_a_pokemon">Choose a pokemon</string>

    <string name="Victory">Victories</string>
    <string name="Defeat">Defeats</string>
    <string name="Notation">Notation</string>
    <string name="Captured_pokemon">Catched Pokemon</string>
    <string name="Lost_pokemon">Lost Pokemons</string>
    <string name="Pokemons">My Pokemons</string>
    <string name="evaluation">Evaluate Your Battle</string>
    <string name="Send">Send Mail</string>
    <string name="Mute">Mute</string>
    <string name="Profil">Profil</string>
    <string name="Choice">CHOICE</string>
    <string name="Attack">Attack</string>
    <string name="Run">Run</string>
    <string name="Change">Change</string>
    <string name="home">Home</string>
    <string name="wonPoke">You won these Pokemons :</string>
    <string name="loosedPoke">You lost these Pokemons :</string>
    <string name="flee">Flee</string>
    <string name="saveOn">SaveOn</string>
    <string name="saveOff">SaveOff</string>
    <string name="mail">Mail To Send Stats</string>
    <string name="back">Back</string>
    <string name="validate">Validate</string>

    <string name="open_menu" translatable="false">Open</string>
    <string name="close_menu" translatable="false">Close</string>
    <string name="textView_pv_default">999/999</string>
    <string name="run_away_battle_title">Run away</string>
    <string name="run_away_battle">Are you sure? This will lead to the permanent loss of your KO cards.</string>
    <string name="replace">" replaces "</string>
    <string name="use">" uses "</string>
    <string name="inflicts">" and inflicts "</string>
    <string name="is_dead">" is dead"</string>
    <string name="escape_failed">Escape failed</string>
    <string name="end_of_turn">End of turn</string>
    <string name="try_to_press_back_button">You cannot leave the fight like this. Use escape button.</string>
    <string name="need_to_rate">You need to rate.</string>
    <string name="saved_file">User saved.</string>
    <string name="save_error">Save error.</string>
    <string name="loaded_file">User loaded.</string>
    <string name="load_error">Load error.</string>
    <string name="remove_error">Save delete error.</string>
    <string name="cards_number" translatable="false">69</string>
    <string name="exampleMail" translatable="false">dupont@mail.com</string>
    <string name="imageButton" translatable="false">ImageButton</string>
    <string name="imageText" translatable="false">ImageText</string>
    <string name="imageView" translatable="false">ImageView</string>
    <string name="scrollView" translatable="false">ScrollView</string>
    <string name="editText" translatable="false">EditText</string>
    <string name="imagebutton_seedecks" translatable="false">imageButton_seeDecks</string>
    <string name="imagebutton_seestats" translatable="false">imageButton_seeStats</string>
    <string name="imagebutton_gohome" translatable="false">imageButton_goHome</string>
    <string name="header" translatable="false">header</string>
    <string name="slash" translatable="false">/</string>
    <string name="homebutton" translatable="false">homeButton</string>
    <string name="button_for_save" translatable="false">button_for_save</string>
    <string name="level">Level</string>
    <string name="exp">Exp</string>

    <string-array name="pokemon_names" translatable="false">
        <item>Alakazam</item>
        <item>Blastoise</item>
        <item>Chansey</item>
        <item>Charizard</item>
        <item>Clefairy</item>
        <item>Gyarados</item>
        <item>Hitmonchan</item>
        <item>Machamp</item>
        <item>Magneton</item>
        <item>Mewtwo</item>
        <item>Nidoking</item>
        <item>Ninetales</item>
        <item>Poliwrath</item>
        <item>Raichu</item>
        <item>Venusaur</item>
        <item>Zapdos</item>
        <item>Beedrill</item>
        <item>Dragonair</item>
        <item>Dugtrio</item>
        <item>Electabuzz</item>
        <item>Electrode</item>
        <item>Pidgeotto</item>
        <item>Arcanine</item>
        <item>Charmeleon</item>
        <item>Dewgong</item>
        <item>Dratini</item>
        <item>Farfetch\'d</item>
        <item>Growlithe</item>
        <item>Haunter</item>
        <item>Ivysaur</item>
        <item>Jynx</item>
        <item>Kadabra</item>
        <item>Kakuna</item>
        <item>Machoke</item>
        <item>Magikarp</item>
        <item>Magmar</item>
        <item>Nidorino</item>
        <item>Poliwhirl</item>
        <item>Porygon</item>
        <item>Raticate</item>
        <item>Seel</item>
        <item>Wartortle</item>
        <item>Abra</item>
        <item>Bulbasaur</item>
        <item>Caterpie</item>
        <item>Charmander</item>
        <item>Diglett</item>
        <item>Doduo</item>
        <item>Drowzee</item>
        <item>Gastly</item>
        <item>Koffing</item>
        <item>Machop</item>
        <item>Magnemite</item>
        <item>Metapod</item>
        <item>Nidoran♂</item>
        <item>Onix</item>
        <item>Pidgey</item>
        <item>Pikachu</item>
        <item>Poliwag</item>
        <item>Ponyta</item>
        <item>Rattata</item>
        <item>Sandshrew</item>
        <item>Squirtle</item>
        <item>Starmie</item>
        <item>Staryu</item>
        <item>Tangela</item>
        <item>Voltorb</item>
        <item>Vulpix</item>
        <item>Weedle</item>
    </string-array>
</resources>