<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="271dp"
        android:layout_height="140dp"
        android:contentDescription="@string/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pok_mon_trading_card_game_logo_svg" />

    <ScrollView
        android:layout_width="358dp"
        android:layout_height="498dp"
        android:layout_marginTop="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:fontFamily="cursive"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                android:textStyle="bold|italic" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="44dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/pseudo"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/pseudo_player"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:autofillHints="username"
                android:ems="10"
                android:hint="@string/pseudo"
                android:inputType="text"
                android:textAlignment="center"
                android:textColorHint="#600606"
                android:textStyle="bold" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="37dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:text="@string/mail"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextEmailAddress_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:autofillHints="emailAddress"
                android:hint="@string/exampleMail"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColorHint="#600606" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="37dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/gender"
                    android:textAlignment="center"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textStyle="bold" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                    <RadioButton
                        android:id="@+id/radioButton_Man"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Man" />

                    <RadioButton
                        android:id="@+id/radioButton_Woman"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Woman" />

                </RadioGroup>
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="37dp" />

            <ToggleButton
                android:id="@+id/toggleButton_save"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#BC3333"
                android:checked="false"
                android:textColor="#FFE0B2"
                android:textOff="@string/saveOff"
                android:textOn="@string/saveOn" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="save"
        android:text="@string/validate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>