<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_list">

    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="332dp"
        android:layout_height="207dp"
        android:layout_marginTop="106dp"
        android:contentDescription="@string/app_logo_content_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pok_mon_trading_card_game_logo_svg" />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="244dp"
        android:layout_height="66dp"
        android:layout_marginTop="56dp"
        android:autofillHints="username"
        android:ems="10"
        android:hint="@string/edittext_username_hints"
        android:inputType="text"
        android:textColorHint="#555151"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo" />

    <Button
        android:id="@+id/button_rules"
        android:layout_width="114dp"
        android:layout_height="63dp"
        android:onClick="goSignUpView"
        android:text="@string/button_rules_text"
        app:layout_constraintBottom_toTopOf="@+id/button_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_username" />

    <Button
        android:id="@+id/button_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/button_exit_text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>