<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintlayout_end_battle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".End_Fight_Activity">

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0dp"
        android:layout_height="169dp"
        android:contentDescription="header"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pok_mon_trading_card_game_logo_svg" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="364dp"
        android:layout_height="318dp"
        app:layout_constraintBottom_toTopOf="@+id/button_end_fight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="52dp" />

            <VideoView
                android:id="@+id/videoView_endFight"
                android:layout_width="match_parent"
                android:layout_height="169dp"
                android:layout_gravity="center" />

            <Space
                android:id="@+id/space"
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView_winOrLose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/wonPoke" />

            <LinearLayout
                android:id="@+id/linearLayout_cards"
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView_card1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/abrabaseset43" />

                <ImageView
                    android:id="@+id/imageView_card2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/abrabaseset43" />

                <ImageView
                    android:id="@+id/imageView_card3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/abrabaseset43" />

                <ImageView
                    android:id="@+id/imageView_card4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/abrabaseset43" />

                <ImageView
                    android:id="@+id/imageView_card5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/abrabaseset43" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="24dp" />

            <TextView
                android:id="@+id/textView_evaluation_combat_end_fight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/evaluation"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textStyle="bold"
                android:typeface="normal" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <RatingBar
                android:id="@+id/ratingBar_endfight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:max="5"
                android:numStars="5"
                android:rating="0"
                android:stepSize="0.5" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_end_fight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goHome"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>